# One2All

./: .gitignore  anomalib_demo.py  anomalib_patchcore_demo.py  det_inference.py  inference.py  inference_example.py  main.py  patchcore_hpo.db  pyproject.toml  setup_dataset.py
results_patchcore_optimized/Patchcore/dummy_texture/: latest
runs/classify/runs/classify/ele_type/: args.yaml  results.csv
runs/classify/runs/classify/ele_type/weights/: best.pt  last.pt
runs/detect/runs/detect/ele_det/: args.yaml  results.csv
runs/segment/runs/detect/ele_det/: args.yaml  results.csv
